@@ -1,8 +1,10 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
-//TODO some duplication with SolutionsGraphNode
 /**
  * The graph for the 'Custom' screen.
+ * It has an expand/collapse bar at the top of it, and can switch between 'concentration' and 'quantity'.
+ * Indicators for hydronium and hydroxide are interactive.
+ * Origin is at top-level of the expand/collapse bar.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -13,11 +15,9 @@ define( function( require ) {
   var ABSwitch = require( 'SUN/ABSwitch' );
   var Dimension2 = require( 'DOT/Dimension2' );
   var ExpandCollapseBar = require( 'SUN/ExpandCollapseBar' );
-  var GraphScale = require( 'PH_SCALE/common/view/graph/GraphScale' );
   var GraphUnits = require( 'PH_SCALE/common/view/graph/GraphUnits' );
   var inherit = require( 'PHET_CORE/inherit' );
   var Line = require( 'SCENERY/nodes/Line' );
-  var LinearGraph = require( 'PH_SCALE/common/view/graph/LinearGraph' );
   var LogarithmicGraph = require( 'PH_SCALE/common/view/graph/LogarithmicGraph' );
   var MultiLineText = require( 'SCENERY_PHET/MultiLineText' );
   var Node = require( 'SCENERY/nodes/Node' );
@@ -25,13 +25,9 @@ define( function( require ) {
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var Property = require( 'AXON/Property' );
-  var Text = require( 'SCENERY/nodes/Text' );
-  var ZoomButton = require( 'PH_SCALE/common/view/graph/ZoomButton' );
 
   // strings
   var concentrationString = require( 'string!PH_SCALE/concentration' );
-  var linearString = require( 'string!PH_SCALE/linear' );
-  var logarithmicString = require( 'string!PH_SCALE/logarithmic' );
   var molesString = require( 'string!PH_SCALE/units.moles' );
   var molesPerLiterString = require( 'string!PH_SCALE/units.molesPerLiter' );
   var quantityString = require( 'string!PH_SCALE/quantity' );
@@ -45,17 +41,15 @@ define( function( require ) {
 
     options = _.extend( {
       expanded: true,
-      units: GraphUnits.MOLES_PER_LITER,
-      graphScale: GraphScale.LOGARITHMIC
+      units: GraphUnits.MOLES_PER_LITER
     }, options );
 
     var thisNode = this;
     Node.call( thisNode );
 
-    var textOptions = { font: new PhetFont( { size: 18, weight: 'bold' } ) };
-
     // units switch
     var graphUnitsProperty = new Property( options.units );
+    var textOptions = { font: new PhetFont( { size: 18, weight: 'bold' } ) };
     var graphUnitsSwitch = new ABSwitch( graphUnitsProperty,
       GraphUnits.MOLES_PER_LITER, new MultiLineText( concentrationString + '\n(' + molesPerLiterString + ')', textOptions ),
       GraphUnits.MOLES, new MultiLineText( quantityString + '\n(' + molesString + ')', textOptions ),
@@ -73,77 +67,28 @@ define( function( require ) {
         buttonLength: PHScaleConstants.EXPAND_COLLAPSE_BUTTON_LENGTH
       } );
 
-    // logarithmic graph, switchable between 'concentration' and 'quantity'
-    var scaleHeight = 475;
-    var logarithmicGraph = new LogarithmicGraph( solution, graphUnitsProperty, {
-      scaleHeight: scaleHeight,
-      isInteractive: true
-    } );
-
-    // linear graph, switchable between 'concentration' and 'quantity'
-    var linearGraph = new LinearGraph( solution, graphUnitsProperty, {
-      scaleHeight: scaleHeight,
-      isInteractive: true
-    } );
-
-    // zoom buttons for the linear graph
-    var magnifyingGlassRadius = 10;
-    var zoomInButton = new ZoomButton( { in: true, radius: magnifyingGlassRadius } );
-    var zoomOutButton = new ZoomButton( { in: false, radius: magnifyingGlassRadius } );
-    var zoomButtons = new Node( { children: [ zoomInButton, zoomOutButton ]} );
-    zoomOutButton.left = zoomInButton.right + 10;
-    zoomOutButton.centerY = zoomInButton.centerY;
-
-    // switch between 'Logarithmic' and 'Linear'
-    var graphScaleProperty = new Property( options.graphScale );
-    var graphScaleSwitch = new ABSwitch( graphScaleProperty,
-      GraphScale.LOGARITHMIC, new Text( logarithmicString, textOptions ),
-      GraphScale.LINEAR, new Text( linearString, textOptions ),
-      { size: new Dimension2( 50, 25 ), centerOnButton: true } );
-
     // vertical line that connects graph to expand/collapse bar
     var lineNode = new Line( 0, 0, 0, 30, { stroke: 'black' } );
 
+    // logarithmic graph, switchable between 'concentration' and 'quantity'
+    var logarithmicGraph = new LogarithmicGraph( solution, graphUnitsProperty, {
+      scaleHeight: 575,
+      isInteractive: true
+    } );
+
     // rendering order
     thisNode.addChild( expandCollapseBar );
-    var graphNode = new Node();
-    thisNode.addChild( graphNode );
-    graphNode.addChild( lineNode );
-    graphNode.addChild( logarithmicGraph );
-    graphNode.addChild( linearGraph );
-    graphNode.addChild( zoomButtons );
-    graphNode.addChild( graphScaleSwitch );
+    thisNode.addChild( lineNode );
+    thisNode.addChild( logarithmicGraph );
 
     // layout
+    lineNode.centerX = expandCollapseBar.centerX;
+    lineNode.top = expandCollapseBar.bottom - 1;
     logarithmicGraph.centerX = lineNode.centerX;
     logarithmicGraph.y = lineNode.bottom - 1; // y, not top
-    linearGraph.centerX = logarithmicGraph.centerX;
-    linearGraph.y = logarithmicGraph.y; // y, not top
-    zoomButtons.centerX = logarithmicGraph.centerX;
-    zoomButtons.top = lineNode.bottom + scaleHeight + 15;
-    graphScaleSwitch.centerX = zoomButtons.centerX;
-    graphScaleSwitch.top = zoomButtons.bottom + 15;
-    graphNode.centerX = expandCollapseBar.centerX;
-    graphNode.top = expandCollapseBar.bottom;
 
     expandedProperty.link( function( expanded ) {
-      graphNode.visible = expanded;
-    } );
-
-    // handle scale changes
-    graphScaleProperty.link( function( graphScale ) {
-      logarithmicGraph.visible = ( graphScale === GraphScale.LOGARITHMIC );
-      linearGraph.visible = zoomButtons.visible = ( graphScale === GraphScale.LINEAR );
-    } );
-
-    // handle zoom of linear graph
-    zoomInButton.addListener( function() {
-      //TODO zoom in
-      console.log( 'zoom in' );
-    } );
-    zoomOutButton.addListener( function() {
-      //TODO zoom out
-      console.log( 'zoom out' );
+      logarithmicGraph.visible = lineNode.visible = expanded;
     } );
   }
 
